--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
+  "resolutions": {
+    "acorn": "^6.4.1",
+    "lodash": "^4.17.12",
+    "minimist": "^1.2.2",
+    "serialize-javascript": "^2.1.1",
+    "set-value": "^2.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
